--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    testImplementation 'org.robolectric:robolectric:4.6.1'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-database-ktx'
 }
